fix spacing of projects page

--- a/style.scss
+++ b/style.scss
@@ -357,7 +357,7 @@ p {
 
 // portfolio
 .projects__wrapper {
-    padding: 7rem 3rem 8rem 3rem;
+    padding: 7rem 1rem 8rem 1rem;
     background: var(--clr-white);
     h1 {
         text-align: center;
